[metadata]
name = keg
version = 0.0.0
description = Full-featured NGDP client implementation
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/keg
download_url = https://github.com/HearthSim/keg/tarball/master
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Games/Entertainment
	Topic :: Internet :: WWW/HTTP
	Topic :: System :: Archiving :: Mirroring


[options]
packages = keg
scripts = bin/ngdp
install_requires =
	click
	requests
	tabulate
	toml
	tqdm
